# rock-paper-scissors

./: .gitignore  Makefile  README.md  env.example  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 0994cbd196d9_added_users_table.py  38c83f346136_game_model.py  44bd96a428b2_added_users_table.py  63746f8ed7cc_game_model.py  9c8d289ffb36_added_options_table.py  e6eff1fe3eee_options_data.py
app/: auth.py  config.py  database.py  main.py
app/crud/: game.py  user.py
app/models/: __init__.py  game.py  option.py  user.py
app/routers/: auth.py  games.py  users.py
app/schemas/: auth.py  game.py  user.py
docs/: rps-game-diagram.drawio
tests/integration/: conftest.py
tests/integration/routes/: test_root.py  test_user.py
tests/unit/models/: conftest.py  test_game.py  test_round.py
